# Multi-Element-Spectral-Intelligence-Engine-MESIE-

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  requirements.txt  spectral_engine.py
.github/workflows/: ci.yml  deploy-mesie-api.yml  publish.yml
bindings/typescript/: mesie-polyglot-client.ts
data/: __init__.py
data/benchmarks/: enterprise_use_cases_benchmark.json
data/neuroai/: alpha_family_manifest.json  auro_lexicon.json  auro_manifest.json  claim_ledger.json  substrate_source.json
data/reference/: biomedical_eeg_reference.json  defense_ew_spectrum_reference.json  earthquake_psd_reference.json  geomagnetic_storm_reference.json  power_grid_harmonics_reference.json  rf_jamming_profile_reference.json  rotdnn_reference.json  structural_fas_reference.json  vibration_monitoring_reference.json
data/samgov/: gsa_opportunity_reference.json
data/samples/: spectral_ingest_sample.csv
data/scenarios/: enterprise_civilian_scenarios.json  military_drone_scenarios.json
data/spectral_library/: defense_rf_bands.json  geomagnetic_pulsations.json
data/worlds/: military_theater_week.json
datasets/zenodo_mersd_v1/: CITATION.cff  README.md  zenodo_metadata.json
deliverables/: Auro_Native_Speaking_Manifest.json  Auro_Voice_Session.json  Enterprise_AI_Suite_Report.json  Is_This_True_Response.json  Is_This_True_Response.md  MAESI_SDK_Major_Benchmarks.json  MAESI_SDK_Major_Benchmarks.md  MAESI_SDK_Run_Report.json  MERSD_Zenodo_Release_Manifest.json  MESIE_Appliance_Manifest.json  MESIE_Appliance_Narrative.md  MESIE_Cluster_Edge_Report.json  MESIE_Deployment_Doctrine.json  MESIE_Enterprise_Chaos_Flow_100_Report.json  MESIE_Enterprise_Chaos_Flow_100_Report.md  MESIE_Enterprise_Drone_Defense_Offense_Thesis.json  MESIE_Enterprise_Drone_Defense_Offense_Thesis.md  MESIE_Field_Access_Report.json  MESIE_Interior_DataCenter_Manifest.json  MESIE_Interior_DataCenter_Narrative.md  MESIE_Laptop_Research_Report.md  MESIE_Monte_Carlo_Enterprise_Report.json  MESIE_Monte_Carlo_Enterprise_Report.md  MESIE_Multi_Enterprise_20_Report.json  MESIE_Multi_Enterprise_20_Report.md  MESIE_Native_Tools_Catalog.json  MESIE_Pro_Update_Report.json  MESIE_Pro_Update_Report.md  MESIE_Production_Tiers_Report.json  MESIE_Production_Tiers_Report.md  MESIE_Release_Readiness.json  MESIE_SamGov_Contractor_Edition.json  MESIE_Scenario_Simulation_Report.json  MESIE_Scenario_Simulation_Report.md  MESIE_Sovereign_Local_120_Report.json  MESIE_Sovereign_Local_120_Report.md  NeuroSwarmAI_Audit_Evidence.json  NeuroSwarmAI_Audit_Evidence.md  NeuroSwarmAI_Drone_Swarm_Report.json  NeuroSwarmAI_Drone_Swarm_Report.md  (+5 more)
deliverables/mission_worlds/: theater_alpha_week_001_narrative.md  theater_alpha_week_001_week_report.json
deliverables/mlperf_submissions/: compliance_manifest.json  latest_submission.json  mesie-130d56e4ccf7.json  mesie-49c25acae0b3.json  mesie-5e5717fde92f.json  mesie-601e22d7ade2.json  mesie-ed2ef171455a.json  mesie-fb8316a09d98.json
deliverables/native_ai/: NativeAI_Manifest.json  NativeAI_sdk_deliverable_demo.json  NativeAI_sdk_deliverable_demo.md  NativeAI_sdk_deliverable_demo_stream.jsonl  NativeAI_sdk_deliverable_demo_tokens.json  NativeAI_sdk_deliverable_demo_vault.json
deliverables/neuroswarmai_com/: WEBSITE_EVIDENCE.md  evidence_manifest.json  proof_substrate.json  readiness_report.json  reproduce.ps1
deliverables/virtual_silicon/: MESIE_Virtual_Silicon_Certification.json  MESIE_Virtual_Silicon_Narrative.md  MESIE_Virtual_Silicon_Report.json
docs/: MESIE_Charter_Research_Paper.md  index.md  laptop_virtual_chip.md  maesi_sdk.md  marketing_speed.md  zenodo_release_notes.md
mesie/: __init__.py  cli.py  version_info.py
mesie-desktop/: README.md  package.json
mesie-desktop/src/: index.html  main.js  renderer.js
mesie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mesie/agents/: __init__.py  trust_remediation.py
mesie/ai/: __init__.py  local_models.py
mesie/cognitive/: __init__.py
mesie/connectome/: environment.py
mesie/corpora/: domains.py
mesie/embeddings/: __init__.py  (+1 more)
phantom_native/: __init__.py  neurocore.py  sovereign_tensor.py  swarm_runtime.py
scripts/: Enter-MESIEShell.ps1  MESIE.ps1  build_enterprise_benchmarks.py  build_robotics_zenodo_dataset.py  embed_my_library.py  field_route.py  monte_carlo_enterprise_benchmark.py  run_auro_eval.py  run_auro_suite.py  run_cluster_edge.py  run_drone_swarm_suite.py  run_enterprise_ai_suite.py  run_enterprise_chaos_flow_100.py  run_enterprise_drone_thesis.py  run_field_access_suite.py  run_interior_datacenter.py  run_is_this_true.py  run_maesi_sdk.py  run_mission_world_week.py  run_multi_enterprise_20.py  run_native_ai_deliverables.py  run_neuroswarm_audit.py  run_neuroswarm_readiness.py  run_pro_update_suite.py  run_production_tiers.py  run_proof_substrate.py  run_release_ready.py  run_samgov_suite.py  run_scenario_simulation_suite.py  run_sdk_major_benchmarks.py  run_sovereign_local_suite.py  run_trust_remediation_agents.py  run_virtual_silicon_suite.py  sync_auro_substrate.py
tests/: test_auro_engine.py  test_connectome.py  test_drone_swarm.py  test_enterprise_ai.py  test_enterprise_ai_advanced.py  test_enterprise_workflows.py  test_field_access.py  test_field_router.py  test_interior_datacenter.py  test_internal_api_engines.py  test_is_this_true.py  test_local_models.py  test_maesi_sdk.py  test_mersd_dataset.py  test_mission_world.py  test_native_ai_stream.py  test_native_tools.py  test_neural_and_approximate.py  test_phantom_native.py  test_pretraining.py  test_pro_update.py  test_production_tiers.py  test_proof_substrate.py  test_release_copilot.py  test_scenario_simulation.py  test_sdk_and_corpus.py  test_sdk_enterprise.py  test_sdk_swarm_integration.py  test_solus_formal_stack.py  test_solus_math_caretakers.py  test_solus_memory_receipts.py  test_sovereign_local_mode.py  test_sovereign_ondevice.py  test_sovereign_vault.py  test_spectral_engine.py  test_swarm_intelligence.py  test_terminal.py  test_transfer.py  test_v03_agentic.py  test_virtual_silicon.py
(+336 files in other folders)
