[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesie"
version = "0.3.0"
description = "Multi-Element Spectral Intelligence Engine — spectral matching, generation, embeddings, transformer-based intelligence protocols, and cognitive integration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Alfredo Medina", email = "alfredo@itsnotailabs.com"}
]
keywords = ["spectral matching", "signal processing", "PSD", "FAS", "RotDnn", "embeddings", "AI", "transformers", "intelligence protocols"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
full = [
    "scipy>=1.9",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "networkx>=3.0",
]
ml = [
    "transformers>=4.30",
    "torch>=2.0; platform_machine != 'ARM64'",
]
ai = [
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "networkx>=3.0",
    "transformers>=4.30",
    "torch>=2.0; platform_machine != 'ARM64'",
]
intelligence = [
    "scipy>=1.9",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "networkx>=3.0",
    "transformers>=4.30",
    "torch>=2.0; platform_machine != 'ARM64'",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
mesie = "mesie.cli:main"

[project.urls]
Homepage = "https://github.com/FreddyCreates/Multi-Element-Spectral-Intelligence-Engine-MESIE-"
Repository = "https://github.com/FreddyCreates/Multi-Element-Spectral-Intelligence-Engine-MESIE-"
Documentation = "https://github.com/FreddyCreates/Multi-Element-Spectral-Intelligence-Engine-MESIE-/tree/main/docs"
"PyPI Release Guide" = "https://github.com/FreddyCreates/Multi-Element-Spectral-Intelligence-Engine-MESIE-/blob/main/docs/pypi_release.md"
"Cloudflare Worker" = "https://github.com/FreddyCreates/Multi-Element-Spectral-Intelligence-Engine-MESIE-/blob/main/workers/mesie-api/README.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mesie*", "data*"]

[tool.setuptools.package-data]
data = ["reference/*.json", "benchmarks/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
